--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ pandas = "^2.2.3"
 scikit-learn = "^1.5.2"
 omegaconf = "^2.3.0"
 pydantic = "^2.10.3"
+loguru = "^0.7.2"
+
+
+[tool.poetry.group.dev.dependencies]
+pdoc = "^15.0.0"
+mypy = "^1.13.0"
+ruff = "^0.8.2"
+pytest = "^8.3.4"
 
 
 [build-system]
@@ -20,3 +28,26 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 air_pollution = "air_pollution.main:main"
+
+# mypy configuration
+[tool.mypy]
+pretty = true
+strict = true
+python_version = "3.12"
+check_untyped_defs = true
+ignore_missing_imports = true
+plugins = ["pydantic.mypy"]
+
+# ruff configuration
+[tool.ruff]
+line-length = 88
+indent-width = 4
+
+[tool.ruff.lint]
+select = ["E", "W", "F", "I"] # Specify the types of rules to enforce
+ignore = ["E501"]             # Ignore line length warnings
+
+[tool.ruff.format]
+quote-style = "double"       # Like Black, use double quotes for strings.
+indent-style = "space"       # Like Black, indent with spaces, rather than tabs.
+docstring-code-format = true
